[package]
name = "glock"
version = "0.1.2"
authors = ["Ayman Madkour <info@aymanmadkour.com>"]
description = "Granular locking crate for Rust"
license = "Apache-2.0"
repository = "https://github.com/aymanmadkour/glock"
readme = "README.md"
keywords = ["concurrency", "locking", "granular"]
categories = ["concurrency"]

[dependencies]

